# CheckersWithOOP

./: Board.cpp  Board.h  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Player.cpp  Player.h  TextColor.h  TypeDef.h  main.cpp
